tests/ui/traits/issue-38604.stderr
error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/issue-38604.rs:14:21
   |
LL |     let _f: Box<dyn Foo> =
   |                     ^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/issue-38604.rs:2:22
   |
LL | trait Foo where u32: Q<Self> {
   |       ---            ^^^^^^^ ...because it uses `Self` as a type parameter
   |       |
   |       this trait is not dyn compatible...
   = help: only type `()` implements `Foo`; consider using it directly instead.

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
